fixed alignment and warning messages issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -87,3 +87,7 @@ footer {
   color: black;
   text-align: center;
 }
+
+#title {
+  width: 20rem;
+}
